Added "guide" for try to get last race grid

--- a/f1.html
+++ b/f1.html
@@ -89,6 +89,7 @@
           style="opacity: 0.8"
         />
       </a>
+
       <!-- Sidebar -->
       <div class="sidebar">
         <!-- Sidebar Menu -->
@@ -97,6 +98,11 @@
       </div>
       <!-- /.sidebar -->
     </aside>
-    <div></div>
+
+    <!-- TOGGLE COMMENT FOR TRY GET LAST GRID ORDER -->
+    <!-- <div>
+      <button id="try">try</button>
+      <ul id="drivers-list"></ul>
+    </div> -->
   </body>
 </html>
