--- a/Pages/f1.html
+++ b/Pages/f1.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello, world!</title>
+    <title>F1 Fantasy</title>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
 
-    <script src="node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
+    <script src="../node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
     <link
       rel="stylesheet"
-      href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+      href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
 
-    <script src="node_modules/admin-lte/dist/js/adminlte.min.js"></script>
+    <script src="../node_modules/admin-lte/dist/js/adminlte.min.js"></script>
     <link
       rel="stylesheet"
-      href="node_modules/admin-lte/dist/css/adminlte.min.css"
+      href="../node_modules/admin-lte/dist/css/adminlte.min.css"
     />
 
-    <script type="module" src="f1.js"></script>
+    <script type="module" src="../wwwroot/js/f1.js"></script>
   </head>
 
   <body>
@@ -83,7 +83,7 @@
       <!-- Brand Logo -->
       <a href="f1.html" class="brand-link">
         <img
-          src="img/f1_logo.svg"
+          src="../wwwroot/img/f1_logo.svg"
           alt="Formula 1"
           class="brand-image img-circle elevation-3"
           style="opacity: 0.8"
