--- a/Pages/f1.html
+++ b/Pages/f1.html
@@ -75,6 +75,21 @@
           </div>
         </div>
       </form>
+      <!-- Right navbar links -->
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="btn btn-primary mr-1" href="login.html">
+            <i class="fas fa-sign-in-alt"> </i>
+            Sign in
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="btn btn-danger d-none" href="#">
+            <i class="fas fa-sign-out-alt"> </i>
+            Sign out
+          </a>
+        </li>
+      </ul>
     </nav>
     <!-- /.navbar -->
 
